--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,27 @@
 @tailwind utilities;
 
 :root {
-	--third-color: #5e59ff;
-	--second-black: #1b1b1b;
+    --third-color: #5e59ff;
+    --second-black: #1b1b1b;
 }
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ul,
 li {
-	list-style: none;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: var(--third-color);
 }
