--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 :root {
     --third-color: #5e59ff;
     --second-black: #1b1b1b;
@@ -27,5 +49,4 @@ li {
 
 a {
     text-decoration: none;
-    color: var(--third-color);
 }
